--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 /* Estilos para los botones de promociones y menús */
 .promo-button, .menu-button {
     background-color: orange; /* Color de fondo naranja */
-    color: black; /* Texto en negro */
+    color: white; /* Texto en negro */
     border: none;
     padding: 15px 30px;
     font-size: 18px;
